network-policy/np-mvc.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-ingress-block
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-mvc-np 
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 80 
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: storage
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: client
spec:
  containers:
  - image: nicolaka/netshoot
    name: client
    command: ["sleep", "3600"]
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: storage
  name: redis
spec:
  containers:
  - image: nginx
    name: redis
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
